--- a/app/src/main/res/layout/activity_notes_add.xml
+++ b/app/src/main/res/layout/activity_notes_add.xml
@@ -18,12 +18,14 @@
 
     <EditText
         android:id="@+id/edt_notesTitleAddN"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginTop="4dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Notes tit"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
@@ -38,12 +40,14 @@
 
     <EditText
         android:id="@+id/edt_notesTextAddN"
-        android:layout_width="wrap_content"
-        android:layout_height="87dp"
+        android:layout_width="0dp"
+        android:layout_height="160dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginTop="12dp"
         android:ems="10"
         android:inputType="textMultiLine"
         android:text="notes exemp "
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView7"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
