--- a/app/src/main/res/layout/notebook_part_call.xml
+++ b/app/src/main/res/layout/notebook_part_call.xml
@@ -40,6 +40,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
         android:text="Delete"
+        android:padding="@dimen/my_value"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
