--- a/app/src/main/res/layout/activity_scheduler_main_layout.xml
+++ b/app/src/main/res/layout/activity_scheduler_main_layout.xml
@@ -4,12 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Modules.Test.Layout.TestRequest">
+    tools:context=".Modules.Schedule.Layout.SchedulerMainLayout">
 
     <com.applandeo.materialcalendarview.CalendarView
         android:id="@+id/calendarView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
 
 </android.support.constraint.ConstraintLayout>
