--- a/app/src/main/res/layout/activity_scheduler_main_layout.xml
+++ b/app/src/main/res/layout/activity_scheduler_main_layout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Modules.Schedule.Layout.SchedulerMainLayout">
+    tools:context=".Modules.Scheduler.Layout.SchedulerMainLayout">
 
     <com.applandeo.materialcalendarview.CalendarView
         android:id="@+id/calendarView"
