--- a/app/src/main/res/layout/activity_view_layout.xml
+++ b/app/src/main/res/layout/activity_view_layout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Modules.PDFView.Layout.ViewLayout">
+    tools:context=".Modules.PDFView.Layout.PDFViewLayout">
 
     <com.github.barteksc.pdfviewer.PDFView
         android:id="@+id/pdfView"
