--- a/app/src/main/res/layout/activity_test_layout.xml
+++ b/app/src/main/res/layout/activity_test_layout.xml
@@ -35,7 +35,7 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
+        style="@style/Widget.AppCompat.ProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
